# ControllMotor_Tkinter

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
src/vm_sensor/: __init__.py  app.py  config.py  models.py  reg_mapping.py
src/vm_sensor/services/: __init__.py  basler_camera_service.py  camera_service.py  image_source_service.py  modbus_service.py  motor_service.py  segment_service.py  storage_service.py
src/vm_sensor/ui/: Shared_Param.py  __init__.py  main_window.py
src/vm_sensor/utils/: frame_utils.py  image_utils.py
tests/: conftest.py  test_basler_camera_service.py  test_image_source_service.py  test_motor_service.py  test_storage_service.py
